FIX: dark mode background in two leftover elements

--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -5,7 +5,7 @@
 //create conversation cards
 .topic-body {
   @include boxShadow;
-  background-color: lighten($secondary, 10%);
+  background-color: var(--material-lighter-secondary);
   margin-top: 10px;
   padding: 20px;
   border-radius: 4px;
